# xctools

./: .travis.yml  Makefile  Makefile.am  configure.ac  rpc-broker.c  rpc-broker.h  rpc-broker_git.bb  signature-parser.c
atapi_pt_helper/: .gitignore  Makefile.am  autogen.sh  configure.ac  configure.in  version-files
atapi_pt_helper/man/: Makefile  atapi_pt_helper.1
atapi_pt_helper/src/: Makefile.am  atapi_pt_argo.h  atapi_pt_helper.c  atapi_pt_v4v.h  project.h  version.c
audio-daemon/: Makefile.am  README  autogen.sh  configure.in  version-files
audio-daemon/files/: audio-daemon_git.bb
audio-daemon/man/: Makefile  audio-daemon.1
audio-daemon/src/: Makefile.am  alsa.c  audio-daemon.c  audio-daemon.h  mb.h  project.h  ring.c  ring.h  version.c
audio_helper/: .gitignore  configure.in  version-files
audio_helper/man/: Makefile  audio_helper.1
audio_helper/src/: Makefile.am  audio_helper.c  main.c  openxtalsa.c  openxtalsa.h  openxtargo.c  openxtargo.h  openxtaudio.c  openxtaudio.h  openxtdebug.c  openxtdebug.h  openxtmixerctl.c  openxtmixerctl.h  openxtpackets.h  openxtsettings.h  openxtv4v.c  openxtv4v.h  openxtvmaudio.c  openxtvmaudio.h  project.h  unittest.c  unittest.h  version.c
carrier-detect/: Makefile.am  carrier-detect.c  configure.in
circular-buffer/: Makefile  cb.c  cb.h
compleat/: Completer.hs  LICENSE  Setup.hs  compleat.cabal  compleat.hs
fusechat/: App.hs  Curl.hs  Errors.hs  Protocol.hs  Rpc.hs  fusechat.cabal  fusechat.hs
gtk-switcher/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  configure.in  version-files
gtk-switcher/pixmaps/: Makefile.am
gtk-switcher/src/: Makefile.am  cli-switcher.c  gtk-switcher-run  gtk-switcher.c  gtk-utils.c  gtk-utils.h  marshall.h  marshall.list  notify.c  project.h  rpc.c  rpc.h  util.h  version.c  vm.c
horologist/: AUTHORS  README  autogen.sh  configure.in  version-files
horologist/maintainer/: tag
horologist/src/: Makefile.am  display.c  display.h  horologist.c  project.h  prototypes.h  roman_clock.c
inquart/: ChangeLog  INSTALL  Makefile.am  NEWS  configure.in  version-files
inquart/maintainer/: tag  tidy
inquart/src/: Makefile.am  inquart.c  project.h  version.c
libdmbus/: Makefile.am  configure.ac  libdmbus-config.src.in  libdmbus.pc.src.in  version-files
libdmbus/app/: Makefile.am  client.c  server.c
libdmbus/src/: Makefile.am  dmbus.c.in  libdmbus.h.in  project.h  rpc_definitions.m4  rpcgen.m4
libxenacpi/: AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.in  libxenacpi-config.src.in  libxenacpi.pc.src.in  version-files
libxenacpi/maintainer/: bootstrap  make_distn  tag  tidy
libxenacpi/src/: Makefile.am  actbl.h  actypes.h  amlcode.h  amlcore.c  amldefs.h  amlgen.c  amlres.c  ext_prototypes.h  libxenacpi.c  project.h  version.c  vid.c  wmi.c  xenacpi-defs.h  xenacpi-head.h.in  xenacpi-tail.h
libxenacpi/test/: Makefile.am  project_test.h  ssdt_device.asl  ssdt_large_res.asl  ssdt_logic.asl  ssdt_math.asl  ssdt_misc.asl  ssdt_small_res.asl  ssdt_sync.asl  test.c  test_aml_gen.c  test_aml_res.c
mmio_set/: Makefile.am  configure.in  mmio_set.c
pci-dm-helper/: Makefile.am  autogen.sh  configure.in  version-files
pci-dm-helper/man/: Makefile  stubdom_helper.1
pci-dm-helper/src/: Makefile.am  pci-dm-helper.c  util.c  util.h
pmutil/: ChangeLog  Makefile.am  NEWS  README  configure.in  version-files
pmutil/maintainer/: tag  tidy
pmutil/src/: Makefile.am  acpi-decode.c  bcl.c  dmar-trace.c  pmutil.c  pmutil.h  project.h  utils.c  version.c  wmi.c
qmp_helper/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  version-files
qmp_helper/src/: Makefile.am  project.h  qmp_helper.c  version.c
rpc-broker/: .travis.yml  Makefile.am  README.md  broker.c  configure.ac  rpc-broker.c  rpc-broker.h  test.rules  xenstore.pc
rpc-broker/src/: Makefile.am  dbus.c  json.c  msg.c  policy.c  policy.h  rpc-broker.c  rpc-broker.h  rpc-dbus.c  rpc-dbus.h  rpc-json.c  rpc-json.h  rpc-policy.h  rpc-signature.h  signature.c  signature.h  websockets.c  websockets.h
rpc-broker/test-policies/: blocked-interface-reply.txt  dbus-connection-failure.txt  test_1.rules  test_2.rules  test_3.rules  test_4.rules  test_5.rules  test_6_deny.rules
src/: dbus.c  json.c  msg.c  policy.c  signature.c  websockets.c
xc-switcher/: Makefile  strbuf.c  strbuf.h  util.h  xc-switcher-run  xc-switcher.c
xc-switcher/debian/: changelog  control  rules
xcdbus_example/: Makefile.am  autogen.sh  configure.in  version-files
xcdbus_example/maintainer/: make_distn  tag  tidy
xcdbus_example/src/: Makefile.am  project.h  version.c  xcdbus_example.c
xcpmd/: .gitignore  Makefile.am  NEWS  README  configure.in  version-files
xcpmd/docs/: XenClient-SMBIOS-wiki-snapshot.docx  windows-2000-instrumentation-wmi-and-acpi.docx
xcpmd/maintainer/: make_distn  tag
xcpmd/src/: .gitignore  Makefile.am  acpi-events.c  acpi-events.h  acpi-module.c  acpi-module.h  battery.c  battery.h  db-helper.c  db-helper.h  default-actions-module.c  default-inputs-module.c  default-inputs-module.h  default.rules  list.h  modules.c  modules.h  netlink.c  netlink.h  parser.c  parser.h  platform.c  project.h  prototypes.h  rules.c  rules.h  utils.c  vm-actions-module.c  vm-events-module.c  vm-events-module.h  vm-utils.c  vm-utils.h  wmi-ssdt.c  xcpmd-dbus-server.c  xcpmd.c  xcpmd.h
xf86-video-vesa-2.3.2/: 13-xorg-modules-path.conf
xf86-video-vesa-2.3.2/src/: vesa.c
xsd-validate/: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.in  version-files
xsd-validate/src/: Makefile.am  xsd-validate.cpp
