dnl
dnl
dnl configure.in.head:
dnl
dnl
dnl $Id: configure.in,v 1.1 2009/07/31 11:58:28 jamesmck Exp $
dnl
dnl $Log: configure.in,v $
dnl Revision 1.1  2009/07/31 11:58:28  jamesmck
dnl *** empty log message ***
dnl
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/audio-daemon.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)

AC_SYS_LARGEFILE

AUDIO_DAEMON_MAJOR_VERSION=`cat $srcdir/version-major`
AUDIO_DAEMON_MINOR_VERSION=`cat $srcdir/version-minor`
AUDIO_DAEMON_MICRO_VERSION=`cat $srcdir/version-micro`


AUDIO_DAEMON_VERSION=$AUDIO_DAEMON_MAJOR_VERSION.$AUDIO_DAEMON_MINOR_VERSION.$AUDIO_DAEMON_MICRO_VERSION

AC_SUBST(AUDIO_DAEMON_MAJOR_VERSION)
AC_SUBST(AUDIO_DAEMON_MINOR_VERSION)
AC_SUBST(AUDIO_DAEMON_MICRO_VERSION)
AC_SUBST(AUDIO_DAEMON_VERSION)


VERSION=$AUDIO_DAEMON_VERSION
PACKAGE=audio-daemon

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)

AM_CONFIG_HEADER(src/config.h)

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_C_INLINE
AC_C_CONST

# Checks for libargo
AC_ARG_WITH([libargo],
            AC_HELP_STRING([--with-libargo=PATH], [Path to prefix where libargo is installed]),
            [LIBARGO_PREFIX=$with_libargo], [])

case "x$LIBARGO_PREFIX" in
        x|xno|xyes)
                LIBARGO_INC=""
                LIBARGO_LIB="-largo"
                ;;
        *)
                LIBARGO_INC="-I${LIBARGO_PREFIX}/include"
                LIBARGO_LIB="-L${LIBARGO_PREFIX}/lib -largo"
                ;;
esac

AC_SUBST(LIBARGO_INC)
AC_SUBST(LIBARGO_LIB)

have_libargo=true

ORIG_LDFLAGS="${LDFLAGS}"
ORIG_CPPFLAGS="${CPPFLAGS}"
        LDFLAGS="${LDFLAGS} ${LIBARGO_LIB}"
        CPPFLAGS="${CPPFLAGS} ${LIBARGO_INC}"
        AC_CHECK_HEADERS([libargo.h], [], [have_libargo=false])
        AC_CHECK_FUNC([argo_socket], [], [have_libargo=false])
LDFLAGS="${ORIG_LDFLAGS}"
CPPFLAGS="${ORIG_CPPFLAGS}"

if test "x$have_libargo" = "xfalse"; then
        AC_MSG_ERROR([
*** libargo is required.
])
fi

AC_OUTPUT([Makefile
	   src/Makefile])


