dnl
dnl
dnl configure.in:
dnl
dnl Copyright (c) 2009 James McKenzie <20@madingley.org>,
dnl All rights reserved.
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT()

AC_PROG_CC
AM_PROG_CC_C_O
AC_SYS_LARGEFILE

AC_CONFIG_MACRO_DIR([m4])


AM_INIT_AUTOMAKE(carrier-detect,1.0.0)

AM_PROG_LIBTOOL

AC_CHECK_HEADERS(sys/mman.h stdio.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM

PKG_CHECK_MODULES([LIBNL],[libnl-3.0]);
LIBNL_INC="$LIBNL_CFLAGS"
LIBNL_LIB="$LIBNL_LIBS"

PKG_CHECK_MODULES([LIBNL_ROUTE],[libnl-route-3.0]);
LIBNL_ROUTE_INC="$LIBNL_ROUTE_CFLAGS"
LIBNL_ROUTE_LIB="$LIBNL_ROUTE_LIBS"


AC_SUBST(LIBNL_INC)
AC_SUBST(LIBNL_LIB)

AC_SUBST(LIBNL_ROUTE_INC)
AC_SUBST(LIBNL_ROUTE_LIB)


AC_OUTPUT([Makefile])

