dnl
dnl
dnl configure.in.head:
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/gtk-switcher.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)

AC_SYS_LARGEFILE

GTKSWITCHER_MAJOR_VERSION=`cat $srcdir/version-major`
GTKSWITCHER_MINOR_VERSION=`cat $srcdir/version-minor`


GTKSWITCHER_VERSION=$GTKSWITCHER_MAJOR_VERSION.$GTKSWITCHER_MINOR_VERSION

AC_SUBST(GTKSWITCHER_MAJOR_VERSION)
AC_SUBST(GTKSWITCHER_MINOR_VERSION)
AC_SUBST(GTKSWITCHER_VERSION)


VERSION=$GTKSWITCHER_VERSION
PACKAGE=gtk-switcher

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)


AM_CONFIG_HEADER(src/config.h)

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_C_INLINE
AC_C_CONST

AC_ARG_WITH(idldir,AC_HELP_STRING([--with-idldir=PATH],[Path to dbus idl desription files]),
                IDLDIR=$with_idldir,IDLDIR=/usr/share/idl)

AC_SUBST(IDLDIR)

AC_CHECK_PROG(XC_RPCGEN,xc-rpcgen,xc-rpcgen)

dnl --xcdbus--

LIBXCDBUS_CONFIG=no
AC_ARG_WITH(libxcdbus,
        AC_HELP_STRING([--with-libxcdbus=PATH],[Path to libxcdbus-config]),
                LIBXCDBUS_CONFIG=$with_libxcdbus,LIBXCDBUS_CONFIG=no)

case "x$LIBXCDBUS_CONFIG" in
        xno)
		AC_PATH_PROG(LIBXCDBUS_CONFIG, libxcdbus-config, no)
        ;;
        x|xyes)
		AC_PATH_PROG(LIBXCDBUS_CONFIG, libxcdbus-config, no)
        ;;
        *)
        ;;
esac

if ! test -x $LIBXCDBUS_CONFIG; then
  PKG_CHECK_MODULES([LIBXCDBUS], [libxcdbus])
  LIBXCDBUS_INC="$LIBXCDBUS_CFLAGS"
  LIBXCDBUS_LIB="$LIBXCDBUS_LIBS"
else
 LIBXCDBUS_INC=`$LIBXCDBUS_CONFIG --cflags`
 LIBXCDBUS_LIB=`$LIBXCDBUS_CONFIG --libs`
fi

AC_SUBST(LIBXCDBUS_INC)
AC_SUBST(LIBXCDBUS_LIB)

dnl --dbus_glib--

DBUS_GLIB_1_CONFIG=no
AC_ARG_WITH(dbus-glib-1,
        AC_HELP_STRING([--with-dbus-glib-1=PATH],[Path to dbus-glib-1-config]),
                DBUS_GLIB_1_CONFIG=$with_dbus-glib-1,DBUS_GLIB_1_CONFIG=no)

case "x$DBUS_GLIB_1_CONFIG" in
        xno)
		AC_PATH_PROG(DBUS_GLIB_1_CONFIG, dbus-glib-1-config, no)
        ;;
        x|xyes)
		AC_PATH_PROG(DBUS_GLIB_1_CONFIG, dbus-glib-1-config, no)
        ;;
        *)
        ;;
esac

if ! test -x $DBUS_GLIB_1_CONFIG; then
  PKG_CHECK_MODULES([DBUS_GLIB_1],[dbus-glib-1]);
  DBUS_GLIB_1_INC="$DBUS_GLIB_1_CFLAGS"
  DBUS_GLIB_1_LIB="$DBUS_GLIB_1_LIBS"
else
  DBUS_GLIB_1_INC=`$DBUS_GLIB_1_CONFIG --cflags`
  DBUS_GLIB_1_LIB=`$DBUS_GLIB_1_CONFIG --libs`
fi

AC_SUBST(DBUS_GLIB_1_INC)
AC_SUBST(DBUS_GLIB_1_LIB)


dnl --glib--

GLIB_20_CONFIG=no
AC_ARG_WITH(glib-2.0,
        AC_HELP_STRING([--with-glib-2.0=PATH],[Path to glib-2.0-config]),
                GLIB_20_CONFIG=$with_glib-2.0,GLIB_20_CONFIG=no)

case "x$GLIB_20_CONFIG" in
        xno)
		AC_PATH_PROG(GLIB_20_CONFIG, glib-2.0-config, no)
        ;;
        x|xyes)
		AC_PATH_PROG(GLIB_20_CONFIG, glib-2.0-config, no)
        ;;
        *)
        ;;
esac

if ! test -x $GLIB_20_CONFIG; then
  PKG_CHECK_MODULES([GLIB_20],[glib-2.0]);
  DBUS_20_INC="$GLIB_20_CFLAGS"
  DBUS_20_LIB="$GLIB_20_LIBS"
else 
  GLIB_20_INC=`$GLIB_20_CONFIG --cflags`
  GLIB_20_LIB=`$GLIB_20_CONFIG --libs`
fi

AC_SUBST(GLIB_20_INC)
AC_SUBST(GLIB_20_LIB)

dnl --gtk--
PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES(LIBNOTIFY, [libnotify])
AC_SUBST(LIBNOTIFY_CFLAGS)
AC_SUBST(LIBNOTIFY_LIBS)

AC_OUTPUT([Makefile
	   src/Makefile pixmaps/Makefile])

