dnl
dnl
dnl configure.in:
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/libxenacpi.c)

AC_PROG_CC
AM_PROG_CC_C_O
AC_SYS_LARGEFILE


LIBXENACPI_MAJOR_VERSION=`cat $srcdir/version-major`
LIBXENACPI_MINOR_VERSION=`cat $srcdir/version-minor`
LIBXENACPI_MICRO_VERSION=`cat $srcdir/version-micro`



LIBXENACPI_INTERFACE_VERSION_MIN=$LIBXENACPI_MINOR_VERSION
LIBXENACPI_INTERFACE_VERSION_MAX=$LIBXENACPI_MINOR_VERSION
LIBXENACPI_INTERFACE_REVISION=1

LIBXENACPI_VERSION=$LIBXENACPI_MAJOR_VERSION.$LIBXENACPI_MINOR_VERSION.$LIBXENACPI_MICRO_VERSION

AC_SUBST(LIBXENACPI_MAJOR_VERSION)
AC_SUBST(LIBXENACPI_MINOR_VERSION)
AC_SUBST(LIBXENACPI_MICRO_VERSION)
AC_SUBST(LIBXENACPI_VERSION)

AC_SUBST(LIBXENACPI_INTERFACE_VERSION_MIN)
AC_SUBST(LIBXENACPI_INTERFACE_VERSION_MAX)
AC_SUBST(LIBXENACPI_INTERFACE_REVISION)


LT_RELEASE=$LIBXENACPI_MAJOR_VERSION.$LIBXENACPI_MINOR_VERSION
LT_CURRENT=$LIBXENACPI_INTERFACE_VERSION_MAX
LT_REVISION=$LIBXENACPI_MICRO_VERSION
LT_AGE=`expr $LIBXENACPI_INTERFACE_VERSION_MAX - $LIBXENACPI_INTERFACE_VERSION_MIN`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBXENACPI_VERSION
PACKAGE=libxenacpi

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_PROG_LIBTOOL

AM_CONFIG_HEADER(src/config.h)

AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)
AC_CHECK_PROG(SED,sed,sed)
AC_PROG_AWK

dnl AC_DEFINE_UNQUOTED(LIBXENACPI_MAJOR_VERSION, $LIBXENACPI_MAJOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBXENACPI_MINOR_VERSION, $LIBXENACPI_MINOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBXENACPI_MICRO_VERSION, $LIBXENACPI_MICRO_VERSION)

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(sys/scsi/impl/uscsi.h scsi/sg.h stdint.h)
AC_CHECK_HEADERS(sys/int_types.h string.h strings.h)
AC_CHECK_HEADERS(dirent.h sys/stat.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_FUNCS(select strdup strstr)

I2_TM_H=$ac_cv_struct_tm

I2_HAVE_STDINT_H=0
I2_HAVE_SYS_INT_TYPES_H=0
if test "$ac_cv_header_sys_int_types_h" = "yes"; then
	I2_HAVE_SYS_INT_TYPES_H=1
fi
if test "$ac_cv_header_stdint_h" = "yes"; then
	I2_HAVE_STDINT_H=1
fi
I2_HAVE_UNISTD_H=0
if test "$ac_cv_header_unistd_h" = "yes"; then
	I2_HAVE_UNISTD_H=1
fi

AC_SUBST(I2_TM_H)
AC_SUBST(I2_HAVE_STDINT_H)
AC_SUBST(I2_HAVE_SYS_INT_TYPES_H)
AC_SUBST(I2_HAVE_UNISTD_H)



AC_OUTPUT([Makefile 
	src/Makefile 
	src/xenacpi-head.h
	test/Makefile 	
	libxenacpi.pc.src
	libxenacpi-config.src],[chmod +x libxenacpi-config.src])

